feat: integrate expo-image-picker for photo sharing functionality in NewPost component

--- a/app.json
+++ b/app.json
@@ -54,6 +54,12 @@
           "microphonePermission": "Allow tiktokClone to access your microphone",
           "recordAudioAndroid": true
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
       ]
     ],
     "experiments": {
