--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.90.0",
+    "@tanstack/react-query": "^5.90.17",
     "expo": "~54.0.29",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.12",
